Fix: Contrast fixed and font-size to

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -12,7 +12,7 @@
 }
 
 .heroLeftContent p {
-  font-size: 1.5rem;
+  font-size: 3rem;
   color: #f0f3f0;
   margin-bottom: 2rem;
 }
@@ -187,13 +187,13 @@ li:hover .section {
   }
 
   .heroLeftContent h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: #f5faf5;
     margin-bottom: 1rem;
   }
 
   .heroLeftContent p {
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #f0f3f0;
     margin-bottom: 2rem;
   }
@@ -217,6 +217,18 @@ li:hover .section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .coursesHeader h3 {
+    font-size: 2rem;
+    color: #507535;
+    margin-bottom: 1rem;
+  }
+
+  .coursesHeader p {
+    font-size: 1.5rem;
+    color: #507535;
+    margin-bottom: 2rem;
   }
 
   .coursesHeaderRight {
